# 576-video-summary

./: CMakeLists.txt  README.md
csci576ProjectGui/: README.md  csci576ProjectGui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  matching_score.csv  processed_shots.csv  resources.qrc
csci576ProjectGui/SFML/: .ninja_deps  .ninja_log  CMakeCache.txt  SFMLSharedTargets.cmake  build.ninja  cmake_install.cmake
csci576ProjectGui/SFML/.cmake/api/v1/reply/: cache-v2-b7250e08ee670340456c.json  cmakeFiles-v1-e23a4c121e0e5fa432e5.json  codemodel-v2-8e72e891005b36e060af.json  index-2021-05-06T09-37-16-0451.json  target-sfml-audio-Debug-dac61a559b33a0cbdcfd.json  (+5 more)
csci576ProjectGui/SFML/src/SFML/: cmake_install.cmake
csci576ProjectGui/SFML/src/SFML/Audio/: cmake_install.cmake
csci576ProjectGui/SFML/src/SFML/Graphics/: cmake_install.cmake
csci576ProjectGui/SFML/src/SFML/Main/: cmake_install.cmake
csci576ProjectGui/SFML/src/SFML/Network/: cmake_install.cmake
csci576ProjectGui/SFML/src/SFML/System/: cmake_install.cmake
csci576ProjectGui/SFML/src/SFML/Window/: cmake_install.cmake
csci576ProjectGui/build-csci576ProjectGui-Desktop_Qt_5_9_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
csci576ProjectGui/build-csci576ProjectGui-Desktop_Qt_5_9_0_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp  qrc_resources.cpp
src/: main.cpp  plot_histogram.py  preprocessor.cpp
src/wav_StarterCode/VisualStudioPlaySound/: Image.aps  Image.h  Image.rc  Image.sln  Image.vcxproj  Image.vcxproj.filters  Main.cpp  ReadMe-C++.txt
